--- a/app/views/demo/hello.html.erb
+++ b/app/views/demo/hello.html.erb
@@ -1,1 +1,11 @@
 <h1>Hello World from hello!</h1>
+
+<% 1 + 1 %> 
+<%= 2 + 2 %>
+<br>
+<% target = "world" %>
+<%= "Hello #{target}" %>
+<br>
+<% 3.times do |n| %>
+    <%= n %>
+<% end %>
