--- a/app/views/subject/index.html.erb
+++ b/app/views/subject/index.html.erb
@@ -1,2 +1,26 @@
-<h1>Subject#index</h1>
-<p>Find me in app/views/subject/index.html.erb</p>
+<div class="subjects index">
+    <h2>Subjects</h2>
+
+    <%= link_to("Add New Subject", '#', :class => 'action new') %>
+
+    <table class="listing" summary="Subject list">
+        <tr class="header">
+            <th>#</th>
+            <th>Subjecct</th>
+            <th>Visible</th>
+            <th>Actions</th>
+            <th>Pages</th>
+        </tr>
+        <% @subjects.each do |subject| %>
+        <tr>
+            <td><%= subject.position %></td>
+            <td><%= subject.name %></td>
+            <td class="center"><%= subject.visbile ? 'Yes' : 'No' %></td>
+            <td class="center"><%=subject.pages.size %></td>
+            <td class="actions">
+                <%= link_to("Show", '#', :class => 'action show') %>
+                <%= link_to("Edit", '#', :class => 'action edit') %>
+                <%= link_to("Delete", '#', :class => 'action delete') %>
+            </td>
+        </tr>
+        <% end %>
