--- a/app/views/subject/index.html.erb
+++ b/app/views/subject/index.html.erb
@@ -1,14 +1,14 @@
 <div class="subjects index">
     <h2>Subjects</h2>
 
-    <%= link_to("Add New Subject", '#', :class => 'action new') %>
+    <%= link_to("Add New Subject", new_subject_path, :class => 'action new') %>
 
     <table class="listing" summary="Subject list">
         <tr class="header">
-            <th>#</th>
-            <th>Subjecct</th>
-            <th>Visible</th>
-            <th>Actions</th>
+            <th>#</th>  
+            <th>Subject</th>  
+            <th>Visible</th>  
+            <th>Actions</th>  
             <th>Pages</th>
         </tr>
         <% @subjects.each do |subject| %>
